--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   </div>
 
   <script>
-  const SCRIPT_URL = "HIER_EURE_APPS_SCRIPT_URL_EINFÜGEN"; // замените на свой /exec
+  const SCRIPT_URL = "https://script.google.com/macros/s/REPLACE_WITH_NEW_EXEC_URL/exec"; // замените на свой /exec
 
   // Slots generieren (10:00–18:00, alle 30 Minuten)
   function generateSlots() {
